[gd_scene load_steps=24 format=3 uid="uid://br0vuvri2rao8"]

[ext_resource type="Script" uid="uid://bsrew7n8ldv1t" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c13dup7wgdm63" path="res://Objects/Niko.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dnkli7cvqq5qe" path="res://main_windows.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://c2nk7evw8monk" path="res://Objects/Gramophone.tscn" id="3_ycdy4"]
[ext_resource type="Texture2D" uid="uid://bmirln57b5vca" path="res://Assets/Buttons/PlayButton.png" id="4_lquwl"]
[ext_resource type="Texture2D" uid="uid://cs3idp5d1m3h3" path="res://Assets/Buttons/Stop_Button.png" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://dn24kgmibsw8h" path="res://Objects/Sun.tscn" id="5_w48qg"]
[ext_resource type="PackedScene" uid="uid://c71spviopjjg8" path="res://playback_speed_control.tscn" id="6_7mycd"]
[ext_resource type="Texture2D" uid="uid://dkosrl6p1xnei" path="res://Assets/Buttons/ReverseButton.png" id="6_efxa6"]
[ext_resource type="Texture2D" uid="uid://be5p6kftkj5dk" path="res://Assets/Icons/Slider_Start.png" id="7_5vw27"]
[ext_resource type="Texture2D" uid="uid://dnfma8apjp42n" path="res://Assets/Icons/Slider_End.png" id="8_kek77"]
[ext_resource type="Texture2D" uid="uid://cip88ds7isegc" path="res://Assets/Buttons/Stop_Button_Hover.png" id="8_yaehf"]
[ext_resource type="FontFile" uid="uid://7u74d0a8okk2" path="res://Assets/Fonts/Minecraftia-Regular.ttf" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://3y1aikb7e21v" path="res://volume_control.tscn" id="10_4c57u"]
[ext_resource type="Texture2D" uid="uid://c1yqamoe4bv6s" path="res://Assets/Buttons/ReverseButton_Hover.png" id="10_074og"]
[ext_resource type="Texture2D" uid="uid://b6nupqg3h4fc2" path="res://Assets/Icons/Slider_Start_Hover.png" id="14_vivmo"]
[ext_resource type="Texture2D" uid="uid://c5hgb0m3w030c" path="res://Assets/Icons/Slider_End_Hover.png" id="15_2cqfq"]

[sub_resource type="AudioStream" id="AudioStream_efxa6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pgsak"]
atlas = ExtResource("4_lquwl")

[sub_resource type="LabelSettings" id="LabelSettings_kek77"]
font = ExtResource("9_kek77")
font_size = 40
font_color = Color(0.588235, 0.396078, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ycdy4"]
font = ExtResource("9_kek77")
font_size = 23
font_color = Color(0.5882353, 0.39607844, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0d6xb"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.588235, 0.396078, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yoe8j"]
font = ExtResource("9_kek77")
font_size = 26
font_color = Color(0.588235, 0.396078, 1, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.0007324219
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1bvp3")

[node name="MainWindow" parent="." instance=ExtResource("2_1bvp3")]
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MainWindow"]
stream = SubResource("AudioStream_efxa6")

[node name="Objects" type="Control" parent="MainWindow"]
texture_filter = 1
anchors_preset = 0
offset_left = 9.0
offset_top = -6.0
offset_right = 49.0
offset_bottom = 34.0

[node name="Gramophone" parent="MainWindow/Objects" instance=ExtResource("3_ycdy4")]
layout_mode = 1
offset_left = 476.0
offset_top = 217.0
offset_right = 476.0
offset_bottom = 217.0
scale = Vector2(6.9, 6.9)

[node name="Niko" parent="MainWindow/Objects" instance=ExtResource("1_ig7tw")]
layout_mode = 1
offset_left = 748.00006
offset_top = 291.00003
offset_right = 748.00006
offset_bottom = 291.00003
scale = Vector2(1.4900024, 1.4900024)
mouse_filter = 2

[node name="Sun" parent="MainWindow/Objects" instance=ExtResource("5_w48qg")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 211.0
offset_top = 281.0
offset_right = 211.0
offset_bottom = 281.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(6, 6)

[node name="Buttons" type="Control" parent="MainWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0016644, 1)
mouse_filter = 2

[node name="PlayPauseButton" type="TextureButton" parent="MainWindow/Buttons"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -142.0
offset_right = 60.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_pgsak")
stretch_mode = 0

[node name="StopButton" type="TextureButton" parent="MainWindow/Buttons"]
layout_mode = 0
offset_left = 289.0
offset_top = 658.0
offset_right = 409.0
offset_bottom = 778.0
texture_normal = ExtResource("5_lquwl")
texture_hover = ExtResource("8_yaehf")
stretch_mode = 0

[node name="ReverseButton" type="TextureButton" parent="MainWindow/Buttons"]
layout_mode = 0
offset_left = 593.0
offset_top = 658.0
offset_right = 713.0
offset_bottom = 778.0
texture_normal = ExtResource("6_efxa6")
texture_hover = ExtResource("10_074og")
stretch_mode = 0

[node name="PlaybackSpeedControlNode" parent="MainWindow" instance=ExtResource("6_7mycd")]
position = Vector2(66, 577)
scale = Vector2(2.8, 2.8)

[node name="SpeedControlSlide" parent="MainWindow/PlaybackSpeedControlNode" index="0"]
min_value = 50.0
max_value = 150.0
step = 5.0

[node name="SpeedMinus" type="TextureButton" parent="MainWindow/PlaybackSpeedControlNode"]
offset_left = -14.0
offset_right = 6.0
offset_bottom = 20.0
texture_normal = ExtResource("7_5vw27")
texture_hover = ExtResource("14_vivmo")
stretch_mode = 0

[node name="SpeedPlus" type="TextureButton" parent="MainWindow/PlaybackSpeedControlNode"]
offset_left = 130.0
offset_right = 150.0
offset_bottom = 20.0
texture_normal = ExtResource("8_kek77")
texture_hover = ExtResource("15_2cqfq")
stretch_mode = 0

[node name="SpeedValue" type="Label" parent="MainWindow/PlaybackSpeedControlNode"]
texture_filter = 1
offset_left = 7.1428585
offset_top = -12.857134
offset_right = 537.1429
offset_bottom = 57.142868
scale = Vector2(0.23, 0.23)
text = "Playback Speed: 100%"
label_settings = SubResource("LabelSettings_kek77")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeControl" parent="MainWindow" instance=ExtResource("10_4c57u")]
position = Vector2(565, 580)
scale = Vector2(2.8, 2.8)

[node name="VolumeControlSlide" parent="MainWindow/VolumeControl" index="0"]
value = 0.0
scrollable = false

[node name="VolumeMinus" type="TextureButton" parent="MainWindow/VolumeControl"]
offset_left = -20.0
offset_top = -1.0
offset_bottom = 19.0
texture_normal = ExtResource("7_5vw27")
texture_hover = ExtResource("14_vivmo")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="VolumePlus" type="TextureButton" parent="MainWindow/VolumeControl"]
offset_left = 125.0
offset_top = -1.0
offset_right = 145.0
offset_bottom = 19.0
texture_normal = ExtResource("8_kek77")
texture_hover = ExtResource("15_2cqfq")
stretch_mode = 0

[node name="VolumeValue" type="Label" parent="MainWindow/VolumeControl"]
texture_filter = 1
offset_left = 2.5
offset_top = -15.0
offset_right = 532.5
offset_bottom = 55.0
scale = Vector2(0.23, 0.23)
text = "Volume: 100%"
label_settings = SubResource("LabelSettings_kek77")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentTrack" type="Control" parent="MainWindow"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CurrentTrackLabel" type="Label" parent="MainWindow/CurrentTrack"]
layout_mode = 0
offset_left = 390.0
offset_top = 420.0
offset_right = 594.0
offset_bottom = 461.0
text = "Current Track"
label_settings = SubResource("LabelSettings_ycdy4")

[node name="PanelContainer" type="PanelContainer" parent="MainWindow/CurrentTrack"]
layout_mode = 0
offset_left = 83.0
offset_top = 461.0
offset_right = 916.0
offset_bottom = 518.0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0d6xb")

[node name="CurrentTrackName" type="Label" parent="MainWindow/CurrentTrack/PanelContainer"]
custom_minimum_size = Vector2(0, -100)
layout_mode = 2
size_flags_vertical = 8
text = "Current Track..."
label_settings = SubResource("LabelSettings_yoe8j")
horizontal_alignment = 1
justification_flags = 35
paragraph_separator = "/n"
text_overrun_behavior = 1
max_lines_visible = 1

[node name="PreviousTrack" type="TextureButton" parent="MainWindow/CurrentTrack"]
layout_mode = 0
offset_left = 28.0
offset_top = 461.0
offset_right = 85.0
offset_bottom = 518.0
texture_normal = ExtResource("7_5vw27")
texture_hover = ExtResource("14_vivmo")
stretch_mode = 0

[node name="NextTrack" type="TextureButton" parent="MainWindow/CurrentTrack"]
layout_mode = 0
offset_left = 914.0
offset_top = 461.0
offset_right = 971.0
offset_bottom = 518.0
texture_normal = ExtResource("8_kek77")
texture_hover = ExtResource("15_2cqfq")
stretch_mode = 0

[connection signal="finished" from="MainWindow/AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="MainWindow/Buttons/PlayPauseButton" to="." method="_on_play_pause_button_pressed"]
[connection signal="pressed" from="MainWindow/Buttons/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="MainWindow/Buttons/ReverseButton" to="." method="_on_reverse_button_pressed"]
[connection signal="focus_exited" from="MainWindow/PlaybackSpeedControlNode/SpeedControlSlide" to="MainWindow/PlaybackSpeedControlNode" method="_on_speed_control_slide_focus_exited"]
[connection signal="mouse_entered" from="MainWindow/PlaybackSpeedControlNode/SpeedControlSlide" to="MainWindow/PlaybackSpeedControlNode" method="_on_speed_control_slide_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/PlaybackSpeedControlNode/SpeedControlSlide" to="MainWindow/PlaybackSpeedControlNode" method="_on_speed_control_slide_mouse_exited"]
[connection signal="value_changed" from="MainWindow/PlaybackSpeedControlNode/SpeedControlSlide" to="." method="_on_speed_control_slide_value_changed"]
[connection signal="pressed" from="MainWindow/PlaybackSpeedControlNode/SpeedMinus" to="." method="_on_speed_minus_pressed"]
[connection signal="pressed" from="MainWindow/PlaybackSpeedControlNode/SpeedPlus" to="." method="_on_speed_plus_pressed"]
[connection signal="value_changed" from="MainWindow/VolumeControl/VolumeControlSlide" to="." method="_on_volume_control_slide_value_changed"]
[connection signal="pressed" from="MainWindow/VolumeControl/VolumeMinus" to="." method="_on_volume_minus_pressed"]
[connection signal="pressed" from="MainWindow/VolumeControl/VolumePlus" to="." method="_on_volume_plus_pressed"]
[connection signal="pressed" from="MainWindow/CurrentTrack/PreviousTrack" to="." method="_on_previous_track_pressed"]
[connection signal="pressed" from="MainWindow/CurrentTrack/NextTrack" to="." method="_on_next_track_pressed"]

[editable path="MainWindow/PlaybackSpeedControlNode"]
[editable path="MainWindow/VolumeControl"]
